# fastapi-project-template

./: README.md  pyproject.toml
src/app/: main.py
